--- a/index.html
+++ b/index.html
@@ -4,25 +4,14 @@
     <title>Ardent's Little Lighting Lab!</title>
     <meta charset="UTF-8">
     <style>
-        .colorBox {
-            width: 200px;
-            height: 200px;
-            border: 2px solid #333;
-            margin: 20px 0;
-        }
-        .slider-container {
-            margin: 10px 0;
-        }
-        input[type="range"] {
-            width: 200px;
-        }
-        font-family: 'Comic Sans MS', 'Comic Sans';
+		
     </style>
 </head>
 <body>
 	<h1>Ardent's Little Lighting Lab!</h1>
 	<p>made with my bestie ChatGPT</p>
 	<hr>
+	<h3>Navigation</h3>
 	<a href='index.html'>home</a><br>
 	<a href='rgb_cmyk.html'>colours!</a><br>
 	<a href='manylights.html'>one channels</a>
