--- a/manylights.html
+++ b/manylights.html
@@ -4,9 +4,17 @@
     <title>Ardent's Little Lighting Lab!</title>
     <meta charset="UTF-8">
     <style>
-        body {
-            padding: 20px;
-        }
+        .split2 {
+			display:flex;
+			flex-direction:row;
+			gap:20px;
+			flex-wrap:wrap;
+		}
+		.column {
+			flex:fit-content;
+			box-sizing:border-box;
+		}
+		
         .slider-container {
             margin-bottom: 20px;
         }
@@ -40,23 +48,28 @@
 	<h1>Ardent's Little Lighting Lab!</h1>
 	<p>made with my bestie ChatGPT</p>
 	<hr>
+	<h3>Navigation</h3>
 	<a href='index.html'>home</a><br>
 	<a href='rgb_cmyk.html'>colours!</a><br>
 	<a href='manylights.html'>one channels</a>
 	<hr>
-	<p>wanna learn html? try asking chatgpt >:D</p>
-</body>
-
-<body>
+	
     <h1>Many Lights (Very Many)</h1>
+	
+	<p style="border: 2px dotted grey; width:fit-content;"> a master slider controls the value of ALL lights.</p>
+
     <div class="slider-container">
         <label for="masterSlider">Master Fader:</label>
         <input type="range" id="masterSlider" min="0" max="255" value="0" class="vertical">
         <span id="masterValue">255</span>
-    </div>
+	</div>
 
     <div id="lightsContainer" class="grid"></div>
-
+	
+	<hr>
+	<h3>Studio Ardent batch 24/25 PA/AVA enthusiasts</h3>
+	<p>teaching tool for lights visualisation</p>
+	
     <script>
         const NUM_LIGHTS = 10;
         const lightsContainer = document.getElementById("lightsContainer");
@@ -97,7 +110,7 @@
                 const value = parseInt(light.slider.value);
                 light.valueLabel.textContent = value;
                 const intensity = Math.round(value * (master / 255));
-                light.box.style.backgroundColor = `rgb(${intensity}, ${intensity}, ${intensity})`;
+                light.box.style.backgroundColor = `rgb(${intensity}, ${intensity*3/4}, ${intensity*3/4})`;
             });
         }
 
