--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
 	<h3>Navigation</h3>
 	<a href='index.html'>home</a><br>
 	<a href='rgb_cmyk.html'>colours!</a><br>
-	<a href='manylights.html'>one channels</a>
+	<a href='manylights.html'>one channels</a><br>
+	<a href='https://instagram.com/hc.cat.distribution.centre/'>click this link to support cats!🐈🐈🐱🐱</a><br>
+	<a href='https://www.scamshield.gov.sg/'>click this link to get 10% off your first purchase of grandMA3!!!</a><br>
+	<a href='https://instagram.com/hamsluminiq/'>click this link to go to a really great photographer</a><br>
+	<a href='https://archiveofourown.org'>click this link to go to a really great website</a><br>
+	<a href='https://youtu.be/qo__6MZIg6U'>link (must watch!)</a><br>
+	<a href='https://www.instagram.com/reel/DJaZNr6pOyK/?igsh=MWVwN3N0ZXh6N293bg=='>click this link to WATCH ARDENT IN ACTION. PLS VOTE!!</a><br>
+	<a href='https://youtu.be/qyaA2boLbyg'>click this link for the best movie in the world</a><br>
+	<a href='https://youtu.be/esO2aa1cwlA'>click this link for MORE LIGHTS!</a><br>
+	<a href='https://youtu.be/mO5oCk4712M'>click this link to see peak AI</a><br>
+	<a href='https://instagram.com/hc_ardent/'>click this link to support the creator! (100% legit)</a><br>
+	<a href='https://youtu.be/T3evnh9lT9k'>click this to go to a great youtube video</a>
+	
 	<hr>
 	<h3>Studio Ardent batch 24/25 PA/AVA enthusiasts</h3>
 	<p>teaching tool for lights visualisation</p>
