--- a/rgb_cmyk.html
+++ b/rgb_cmyk.html
@@ -41,35 +41,38 @@
     <h2>RGB</h2>
 	<p style="border: 2px dotted grey; width:fit-content;">
 	commonly found in PAR cans, CYC LEDs, spots that have built in colours.<br>
-	RGB is ADDITIVE. (tip:add red, white, blue to get white light!)
+	RGB is ADDITIVE. (tip: add red, white, blue to get white light!)
 	</p>
+	
+	<p style="border: 2px dotted grey; width:fit-content;"> also i can't figure out how to make the buttons work. so they're unresponsive :D'</p>
+
 
     <div class="slider-container">
-        <label for="intensitySlider">Intensity:</label>
         <input type="range" id="intensitySlider" min="0" max="255" value="0">
         <span id="intensityValue">0</span>
+        <button id="intensityFlash">Intensity</button>
     </div>
 
     <div class="slider-container">
-        <label for="redSlider">Red:</label>
         <input type="range" id="redSlider" min="0" max="255" value="0">
         <span id="redValue">0</span>
+        <button id="redFlash">RED</button>
     </div>
 
     <div class="slider-container">
-        <label for="greenSlider">Green:</label>
         <input type="range" id="greenSlider" min="0" max="255" value="0">
         <span id="greenValue">0</span>
+        <button id="greenFlash">GREEN</button>
     </div>
 
     <div class="slider-container">
-        <label for="blueSlider">Blue:</label>
         <input type="range" id="blueSlider" min="0" max="255" value="0">
         <span id="blueValue">0</span>
+        <button id="blueFlash">BLUE</button>
     </div>
 
     <div id="rgbBox" class="colorBox"></div>
-	<p>RGB Hex: <span id="rgbHex">#000000</span></p> <!-- NEW -->
+	<p>RGB Hex: <span id="rgbHex">#000000</span></p> 
 
     <hr>
 
@@ -81,27 +84,27 @@
 	</p>
 
     <div class="slider-container">
-        <label for="cyanSlider">Cyan:</label>
         <input type="range" id="cyanSlider" min="0" max="255" value="0">
         <span id="cyanValue">0</span>
+        <button id="cyanFlash">CYAN</button>
     </div>
 
     <div class="slider-container">
-        <label for="magentaSlider">Magenta:</label>
         <input type="range" id="magentaSlider" min="0" max="255" value="0">
         <span id="magentaValue">0</span>
+        <button id="magentaFlash">MAGENTA</button>
     </div>
 
     <div class="slider-container">
-        <label for="yellowSlider">Yellow:</label>
         <input type="range" id="yellowSlider" min="0" max="255" value="0">
         <span id="yellowValue">0</span>
+        <button id="yellowFlash">YELLOW</button>
     </div>
 
     <div class="slider-container">
-        <label for="blackSlider">Black | Key:</label>
-        <input type="range" id="blackSlider" min="0" max="255" value="0">
-        <span id="blackValue">0</span>
+        <input type="range" id="keySlider" min="0" max="255" value="0">
+        <span id="keyValue">0</span>
+        <button id="keyFlash">Black|KEY</button>
     </div>
     
     
@@ -123,19 +126,20 @@
         const greenValue = document.getElementById("greenValue");
         const blueValue = document.getElementById("blueValue");
         const intensityValue = document.getElementById("intensityValue");
-
+		
+		
         const rgbBox = document.getElementById("rgbBox");
 
         // CMYK sliders
         const cyanSlider = document.getElementById("cyanSlider");
         const magentaSlider = document.getElementById("magentaSlider");
         const yellowSlider = document.getElementById("yellowSlider");
-        const blackSlider = document.getElementById("blackSlider");
+        const keySlider = document.getElementById("keySlider");
 
         const cyanValue = document.getElementById("cyanValue");
         const magentaValue = document.getElementById("magentaValue");
         const yellowValue = document.getElementById("yellowValue");
-        const blackValue = document.getElementById("blackValue");
+        const keyValue = document.getElementById("keyValue");
 
         const cmykBox = document.getElementById("cmykBox");
 
@@ -146,20 +150,21 @@
 			return value.toString(16).padStart(2, '0');
 		}
 
+
 		function updateRGBBox() {
 			let r = parseInt(redSlider.value);
 			let g = parseInt(greenSlider.value);
 			let b = parseInt(blueSlider.value);
 			const intensity = parseInt(intensitySlider.value) / 255;
-
-			r = Math.round(r * intensity);
-			g = Math.round(g * intensity);
-			b = Math.round(b * intensity);
-
+			
 			redValue.textContent = r;
 			greenValue.textContent = g;
 			blueValue.textContent = b;
 			intensityValue.textContent = parseInt(intensitySlider.value);
+			
+			r = Math.round(r * intensity);
+			g = Math.round(g * intensity);
+			b = Math.round(b * intensity);	
 
 			rgbBox.style.backgroundColor = `rgb(${r}, ${g}, ${b})`;
 			rgbHex.textContent = `#${toHex(r)}${toHex(g)}${toHex(b)}`.toUpperCase(); // NEW
@@ -169,16 +174,16 @@
 			const c = parseInt(cyanSlider.value);
 			const m = parseInt(magentaSlider.value);
 			const y = parseInt(yellowSlider.value);
-			const k = parseInt(blackSlider.value);
-
-			const r = Math.round((255 - c) * (1 - k / 255));
-			const g = Math.round((255 - m) * (1 - k / 255));
-			const b = Math.round((255 - y) * (1 - k / 255));
-
+			const k = parseInt(keySlider.value);
+			
 			cyanValue.textContent = c;
 			magentaValue.textContent = m;
 			yellowValue.textContent = y;
-			blackValue.textContent = k;
+			keyValue.textContent = k;
+			
+			const r = Math.round((255 - c) * (1 - k / 255));
+			const g = Math.round((255 - m) * (1 - k / 255));
+			const b = Math.round((255 - y) * (1 - k / 255));
 
 			cmykBox.style.backgroundColor = `rgb(${r}, ${g}, ${b})`;
 			cmykHex.textContent = `#${toHex(r)}${toHex(g)}${toHex(b)}`.toUpperCase(); // NEW
@@ -188,7 +193,7 @@
 				slider.addEventListener("input", updateRGBBox);
 			});
 
-			[cyanSlider, magentaSlider, yellowSlider, blackSlider].forEach(slider => {
+			[cyanSlider, magentaSlider, yellowSlider, keySlider].forEach(slider => {
 				slider.addEventListener("input", updateCMYKBox);
 			});
 
